--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,5 +24,5 @@ jobs:
       - name: Build
         shell: bash
         run: |
-          build --package gif-jni --lib  --release --target x86_64-pc-windows-msvc
+          cargo build --package gif-jni --lib  --release --target x86_64-pc-windows-msvc
 
