--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,7 +30,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: windows-build
-          path: target/x86_64-pc-windows-msvc/release/
+          path: target/x86_64-pc-windows-msvc/release/gif_jni.*
 
   linux-build:
     runs-on: ubuntu-latest
@@ -62,7 +62,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: linux-build
-          path: target/x86_64-unknown-linux-gnu/release/
+          path: target/x86_64-unknown-linux-gnu/release/libgif_jni.*
 
   macos-build:
     runs-on: macos-latest
@@ -91,6 +91,6 @@ jobs:
       - name: Upload
         uses: actions/upload-artifact@v3
         with:
-          name: linux-build
-          path: target/x86_64-apple-darwin/release/
+          name: macos-build
+          path: target/x86_64-apple-darwin/release/libgif_jni.*
 
