--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,11 @@ edition = "2021"
 [dependencies]
 gif = "0.11.3"
 jni = "0.19.0"
-skia-bindings = "0.49.0"
-skia-safe = "0.49.0"
+skia-safe = "0.49.1"
 
 [lib]
 crate-type = ["cdylib"]
+
+[profile.release]
+lto = true
+codegen-units = 1
