update: skia-safe 0.50.0

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 gif = "0.11.3"
 jni = "0.19.0"
-skia-safe = "0.49.1"
+skia-safe = "0.50.0"
 
 [lib]
 crate-type = ["cdylib"]
@@ -16,3 +16,5 @@ crate-type = ["cdylib"]
 [profile.release]
 lto = true
 codegen-units = 1
+strip = true
+panic = "abort"
