--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,7 +11,7 @@ jobs:
       - name: Install Rust
         uses: hecrj/setup-rust-action@master
         with:
-          rust-version: stable
+          rust-version: nightly
 
       - name: Install LLVM
         run: choco install llvm
@@ -21,20 +21,10 @@ jobs:
         run: |
           rustup target add x86_64-pc-windows-msvc
 
-      - name: Install Cargo Bloat
-        shell: bash
-        run: |
-          cargo install cargo-bloat
-
       - name: Build
         shell: bash
         run: |
           cargo build --package gif-jni --lib --release --target x86_64-pc-windows-msvc
-
-      - name: Bloat
-        shell: bash
-        run: |
-          cargo bloat --release --crates --target x86_64-pc-windows-msvc
 
       - name: Rename Library File Name
         shell: bash
@@ -63,27 +53,17 @@ jobs:
         run: rustup update
 
       - name: Configure Rust Toolchain
-        run: rustup default stable
+        run: rustup default nightly
 
       - name: Install Rust Target
         shell: bash
         run: |
           rustup target add aarch64-unknown-linux-gnu
 
-      - name: Install Cargo Bloat
-        shell: bash
-        run: |
-          cargo install cargo-bloat
-
       - name: Build
         shell: bash
         run: |
           cargo build --package gif-jni --lib --release --target aarch64-unknown-linux-gnu
-
-      - name: Bloat
-        shell: bash
-        run: |
-          cargo bloat --release --crates --target aarch64-unknown-linux-gnu
 
       - name: Rename Library File Name
         shell: bash
@@ -112,27 +92,17 @@ jobs:
         run: rustup update
 
       - name: Configure Rust Toolchain
-        run: rustup default stable
+        run: rustup default nightly
 
       - name: Install Rust Target
         shell: bash
         run: |
           rustup target add x86_64-unknown-linux-gnu
 
-      - name: Install Cargo Bloat
-        shell: bash
-        run: |
-          cargo install cargo-bloat
-
       - name: Build
         shell: bash
         run: |
           cargo build --package gif-jni --lib --release --target x86_64-unknown-linux-gnu
-
-      - name: Bloat
-        shell: bash
-        run: |
-          cargo bloat --release --crates --target x86_64-unknown-linux-gnu
 
       - name: Rename Library File Name
         shell: bash
@@ -156,7 +126,7 @@ jobs:
       - name: Install Rust
         uses: hecrj/setup-rust-action@master
         with:
-          rust-version: stable
+          rust-version: nightly
 
       - name: Remove LLVM (macOS)
         run: brew uninstall llvm
@@ -166,20 +136,10 @@ jobs:
         run: |
           rustup target add aarch64-apple-darwin
 
-      - name: Install Cargo Bloat
-        shell: bash
-        run: |
-          cargo install cargo-bloat
-
       - name: Build
         shell: bash
         run: |
           cargo build --package gif-jni --lib --release --target aarch64-apple-darwin
-
-      - name: Bloat
-        shell: bash
-        run: |
-          cargo bloat --release --crates --target aarch64-apple-darwin
 
       - name: Rename Library File Name
         shell: bash
@@ -203,7 +163,7 @@ jobs:
       - name: Install Rust
         uses: hecrj/setup-rust-action@master
         with:
-          rust-version: stable
+          rust-version: nightly
 
       - name: Remove LLVM (macOS)
         run: brew uninstall llvm
@@ -213,20 +173,10 @@ jobs:
         run: |
           rustup target add x86_64-apple-darwin
 
-      - name: Install Cargo Bloat
-        shell: bash
-        run: |
-          cargo install cargo-bloat
-
       - name: Build
         shell: bash
         run: |
           cargo build --package gif-jni --lib --release --target x86_64-apple-darwin
-
-      - name: Bloat
-        shell: bash
-        run: |
-          cargo bloat --release --crates --target x86_64-apple-darwin
 
       - name: Rename Library File Name
         shell: bash
