--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,7 +2,7 @@ name: "build"
 on: [ push, pull_request ]
 
 jobs:
-  windows-x64-build:
+  windows-build:
     runs-on: windows-latest
     steps:
       - name: Checkout
@@ -36,51 +36,11 @@ jobs:
       - name: Upload
         uses: actions/upload-artifact@v3
         with:
-          name: windows-x64-build
+          name: windows-build
           path: library/*
 
-  linux-arm64-build:
+  linux-build:
     runs-on: ubuntu-latest
-    container: ghcr.io/pragmatrix/rust-skia-linux:latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Prepare Rustup
-        run: (cd /github/home && ln -s /root/.cargo)
-
-      - name: Update Rustup and Rust
-        run: rustup update
-
-      - name: Configure Rust Toolchain
-        run: rustup default nightly
-
-      - name: Install Rust Target
-        shell: bash
-        run: |
-          rustup target add aarch64-unknown-linux-gnu
-
-      - name: Build
-        shell: bash
-        run: |
-          cargo build --package gif-jni --lib --release --target aarch64-unknown-linux-gnu
-
-      - name: Rename Library File Name
-        shell: bash
-        run: |
-          mkdir library
-          cp target/aarch64-unknown-linux-gnu/release/libgif_jni.so library/libgif-linux-arm64.so
-          sha256sum library/libgif-linux-arm64.so | awk '{ print $1 }' > library/libgif-linux-arm64.so.sha256
-
-      - name: Upload
-        uses: actions/upload-artifact@v3
-        with:
-          name: linux-arm64-build
-          path: library/*
-
-  linux-x64-build:
-    runs-on: ubuntu-latest
-    container: ghcr.io/pragmatrix/rust-skia-linux:latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -98,11 +58,15 @@ jobs:
         shell: bash
         run: |
           rustup target add x86_64-unknown-linux-gnu
+          rustup target add x86_64-linux-android
+          rustup target add aarch64-linux-android
 
       - name: Build
         shell: bash
         run: |
           cargo build --package gif-jni --lib --release --target x86_64-unknown-linux-gnu
+          cargo build --package gif-jni --lib --release --target x86_64-linux-android
+          cargo build --package gif-jni --lib --release --target aarch64-linux-android
 
       - name: Rename Library File Name
         shell: bash
@@ -110,14 +74,18 @@ jobs:
           mkdir library
           cp target/x86_64-unknown-linux-gnu/release/libgif_jni.so library/libgif-linux-x64.so
           sha256sum library/libgif-linux-x64.so | awk '{ print $1 }' > library/libgif-linux-x64.so.sha256
+          cp target/x86_64-linux-android/release/libgif_jni.so library/libgif-android-x64.so
+          sha256sum library/libgif-android-x64.so | awk '{ print $1 }' > library/libgif-android-x64.so.sha256
+          cp target/aarch64-linux-android/release/libgif_jni.so library/libgif-android-arm64.so
+          sha256sum library/libgif-android-arm64.so | awk '{ print $1 }' > library/libgif-android-arm64.so.sha256
 
       - name: Upload
         uses: actions/upload-artifact@v3
         with:
-          name: linux-x64-build
+          name: linux-build
           path: library/*
 
-  macos-arm64-build:
+  macos-build:
     runs-on: macos-latest
     steps:
       - name: Checkout
@@ -135,47 +103,12 @@ jobs:
         shell: bash
         run: |
           rustup target add aarch64-apple-darwin
-
-      - name: Build
-        shell: bash
-        run: |
-          cargo build --package gif-jni --lib --release --target aarch64-apple-darwin
-
-      - name: Rename Library File Name
-        shell: bash
-        run: |
-          mkdir library
-          cp target/aarch64-apple-darwin/release/libgif_jni.dylib library/libgif-macos-arm64.dylib
-          shasum -a 256 library/libgif-macos-arm64.dylib | awk '{ print $1 }' > library/libgif-macos-arm64.dylib.sha256
-
-      - name: Upload
-        uses: actions/upload-artifact@v3
-        with:
-          name: macos-arm64-build
-          path: library/*
-
-  macos-x64-build:
-    runs-on: macos-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Install Rust
-        uses: hecrj/setup-rust-action@master
-        with:
-          rust-version: nightly
-
-      - name: Remove LLVM (macOS)
-        run: brew uninstall llvm
-
-      - name: Install Rust Target
-        shell: bash
-        run: |
           rustup target add x86_64-apple-darwin
 
       - name: Build
         shell: bash
         run: |
+          cargo build --package gif-jni --lib --release --target aarch64-apple-darwin
           cargo build --package gif-jni --lib --release --target x86_64-apple-darwin
 
       - name: Rename Library File Name
@@ -184,10 +117,12 @@ jobs:
           mkdir library
           cp target/x86_64-apple-darwin/release/libgif_jni.dylib library/libgif-macos-x64.dylib
           shasum -a 256 library/libgif-macos-x64.dylib | awk '{ print $1 }' > library/libgif-macos-x64.dylib.sha256
+          cp target/aarch64-apple-darwin/release/libgif_jni.dylib library/libgif-macos-arm64.dylib
+          shasum -a 256 library/libgif-macos-arm64.dylib | awk '{ print $1 }' > library/libgif-macos-arm64.dylib.sha256
 
       - name: Upload
         uses: actions/upload-artifact@v3
         with:
-          name: macos-x64-build
+          name: macos-build
           path: library/*
 
