--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,6 @@ lto = true
 codegen-units = 1
 strip = true
 panic = "abort"
+
+[target.aarch64-linux-android]
+linker = "aarch64-linux-android-clang"
