--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,6 @@ panic = "abort"
 
 [target.aarch64-linux-android]
 linker = "aarch64-linux-android29-clang"
+
+[target.x86_64-linux-android]
+linker = "x86_64-linux-android29-clang"
