--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -71,11 +71,19 @@ jobs:
         shell: bash
         run: |
           cargo build --package gif-jni --lib --release --target x86_64-linux-android
+        env:
+          CC_x86_64_linux_android: x86_64-linux-android26-clang
+          CXX_x86_64_linux_android: x86_64-linux-android26-clang++
+          CARGO_TARGET_X86_64_LINUX_ANDROID: x86_64-linux-android26-clang
 
       - name: Build Android ARM64
         shell: bash
         run: |
           cargo build --package gif-jni --lib --release --target aarch64-linux-android
+        env:
+          CC_AARCH64_LINUX_ANDROID: aarch64-linux-android26-clang
+          CXX_AARCH64_LINUX_ANDROID: aarch64-linux-android26-clang++
+          CARGO_TARGET_AARCH64_LINUX_ANDROID: aarch64-linux-android26-clang
 
       - name: Rename Library File Name
         shell: bash
