--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -59,7 +59,7 @@ jobs:
         shell: bash
         run: |
           rustup target add x86_64-unknown-linux-gnu
-          rustup target add aarch64-unknown-linux-musl
+          rustup target add aarch64-unknown-linux-gnu
           rustup target add x86_64-linux-android
           rustup target add aarch64-linux-android
 
@@ -71,7 +71,9 @@ jobs:
       - name: Build Linux ARM64
         shell: bash
         run: |
-          cargo build --package gif-jni --lib --release --target aarch64-unknown-linux-musl
+          cargo build --package gif-jni --lib --release --target aarch64-unknown-linux-gnu
+        env:
+          CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU: aarch64-linux-gnu-gcc
 
       - name: Build Android X64
         shell: bash
@@ -97,7 +99,7 @@ jobs:
           mkdir library
           cp target/x86_64-unknown-linux-gnu/release/libgif_jni.so library/libgif-linux-x64.so
           sha256sum library/libgif-linux-x64.so | awk '{ print $1 }' > library/libgif-linux-x64.so.sha256
-          cp target/aarch64-unknown-linux-musl/release/libgif_jni.so library/libgif-linux-arm64.so
+          cp target/aarch64-unknown-linux-gnu/release/libgif_jni.so library/libgif-linux-arm64.so
           sha256sum library/libgif-linux-x64.so | awk '{ print $1 }' > library/libgif-linux-arm64.so.sha256
           cp target/x86_64-linux-android/release/libgif_jni.so library/libgif-android-x64.so
           sha256sum library/libgif-android-x64.so | awk '{ print $1 }' > library/libgif-android-x64.so.sha256
