--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -53,7 +53,9 @@ jobs:
         run: rustup update
 
       - name: Configure Rust Toolchain
-        run: rustup default nightly
+        run: |
+          rustup default nightly
+          rustup toolchain install nightly-aarch64-unknown-linux-gnu
 
       - name: Install Rust Target
         shell: bash
