--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -60,7 +60,7 @@ jobs:
         run: |
           rustup target add x86_64-unknown-linux-gnu
           rustup target add aarch64-unknown-linux-gnu
-          apt-get install -Y gcc-multilib
+          apt-get install -y gcc-multilib
 
       - name: Build Linux X64
         shell: bash
