--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -39,6 +39,10 @@ jobs:
           name: windows-build
           path: library/*
 
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+
   linux-build:
     runs-on: ubuntu-latest
     steps:
@@ -72,7 +76,7 @@ jobs:
         run: |
           cargo build --package gif-jni --lib --release --target aarch64-unknown-linux-gnu
         env:
-          BINDGEN_EXTRA_CLANG_ARGS_AARCH64_UNKNOWN_LINUX_GNU: link-args=--enable-cxx11 --enable-libcpp
+          BINDGEN_EXTRA_CLANG_ARGS_AARCH64_UNKNOWN_LINUX_GNU: link-args='--enable-cxx11 --enable-libcpp'
 
       - name: Rename Library File Name
         shell: bash
@@ -88,6 +92,10 @@ jobs:
         with:
           name: linux-build
           path: library/*
+
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
 
   android-build:
     runs-on: ubuntu-latest
@@ -188,4 +196,8 @@ jobs:
         with:
           name: macos-build
           path: library/*
+
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
 
