--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -64,7 +64,7 @@ jobs:
         run: |
           rustup target add x86_64-unknown-linux-gnu
           rustup target add aarch64-unknown-linux-gnu
-          sudo apt-get install -y gcc-multilib g++-9
+          sudo apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu 
 
       - name: Build Linux X64
         shell: bash
@@ -76,7 +76,7 @@ jobs:
         run: |
           cargo build --package gif-jni --lib --release --target aarch64-unknown-linux-gnu
         env:
-          BINDGEN_EXTRA_CLANG_ARGS_AARCH64_UNKNOWN_LINUX_GNU: link-args='--enable-cxx11 --enable-libcpp'
+          CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: aarch64-linux-gnu-gcc
 
       - name: Rename Library File Name
         shell: bash
