--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -64,7 +64,7 @@ jobs:
         run: |
           rustup target add x86_64-unknown-linux-gnu
           rustup target add aarch64-unknown-linux-gnu
-          sudo apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu libfontconfig1-dev
+          sudo apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
 
       - name: Build Linux X64
         shell: bash
@@ -77,6 +77,7 @@ jobs:
           cargo build --package gif-jni --lib --release --target aarch64-unknown-linux-gnu
         env:
           CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: aarch64-linux-gnu-gcc
+          LD_LIBRARY_PATH: "usr/lib/fontconfig1/:"
 
       - name: Rename Library File Name
         shell: bash
@@ -119,6 +120,7 @@ jobs:
         with:
           api: '26'
           arch: 'x86_64'
+          force: true
 
       - name: Install Rust Target
         shell: bash
