--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -77,7 +77,7 @@ jobs:
           cargo build --package gif-jni --lib --release --target aarch64-unknown-linux-gnu
         env:
           CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: aarch64-linux-gnu-gcc
-          LD_LIBRARY_PATH: "/usr/lib/fontconfig:/usr/lib/freetype/"
+          LD_LIBRARY_PATH: "/usr/lib/fontconfig:/usr/lib/freetype/:"
 
       - name: Rename Library File Name
         shell: bash
@@ -115,18 +115,20 @@ jobs:
         with:
           version: "13.0.1"
 
-      - name: Install Android NDK
-        uses: ravinderjangra/android-ndk-toolchain-setup@0.2
-        with:
-          api: '26'
-          arch: 'x86_64'
-          force: true
-
       - name: Install Rust Target
         shell: bash
         run: |
           rustup target add x86_64-linux-android
           rustup target add aarch64-linux-android
+          mkdir ndk
+
+      - name: Install Android NDK
+        uses: ravinderjangra/android-ndk-toolchain-setup@0.2
+        with:
+          api: '26'
+          arch: 'x86_64,aarch64'
+          install-location: 'ndk'
+          force: true
 
       - name: Build Android X64
         shell: bash
