--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -66,7 +66,7 @@ jobs:
           rustup target add aarch64-unknown-linux-gnu
           sudo apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
           cd ~
-          git git@gitlab.freedesktop.org:fontconfig/fontconfig.git
+          git clone git@gitlab.freedesktop.org:fontconfig/fontconfig.git
           cd fontconfig
           ./config --prefix=/usr/aarch64-linux-gnu/bin/lib --cross-compile-prefix=aarch64-linux-gnu- no-asm shared
           git checkout 2.14.0
@@ -133,6 +133,12 @@ jobs:
         with:
           ndk-version: r21e
 
+      - name: Set Android NDK Path
+        shell: bash
+        run: |
+          ll ${{ steps.setup-ndk.outputs.ndk-path }}
+          PATH=${PATH}:${{ steps.setup-ndk.outputs.ndk-path }}/toolchains/llvm/prebuilt/x86_64/bin
+
       - name: Build Android X64
         shell: bash
         run: |
@@ -141,7 +147,7 @@ jobs:
           ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
           CC_X86_64_LINUX_ANDROID: $ANDROID_NDK_HOME/toolchains/llvm/prebuilt/linux-x86_64/bin/x86_64-linux-android26-clang
           CXX_X86_64_LINUX_ANDROID: $ANDROID_NDK_HOME/toolchains/llvm/prebuilt/linux-x86_64/bin/x86_64-linux-android26-clang++
-          CARGO_TARGET_X86_64_LINUX_ANDROID_LINKER: $CC_X86_64_LINUX_ANDROID
+          CARGO_TARGET_X86_64_LINUX_ANDROID_LINKER: $ANDROID_NDK_HOME/toolchains/llvm/prebuilt/linux-x86_64/bin/x86_64-linux-android26-clang
 
       - name: Build Android ARM64
         shell: bash
