--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -65,12 +65,6 @@ jobs:
           rustup target add x86_64-unknown-linux-gnu
           rustup target add aarch64-unknown-linux-gnu
           sudo apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
-          cd ~
-          git clone git@gitlab.freedesktop.org:fontconfig/fontconfig.git
-          cd fontconfig
-          ./config --prefix=/usr/aarch64-linux-gnu/bin/lib --cross-compile-prefix=aarch64-linux-gnu- no-asm shared
-          git checkout 2.14.0
-          cd /home/runner/work/gif-jni/gif-jni
 
       - name: Build Linux X64
         shell: bash
@@ -83,7 +77,7 @@ jobs:
           cargo build --package gif-jni --lib --release --target aarch64-unknown-linux-gnu
         env:
           CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: aarch64-linux-gnu-gcc
-          LD_LIBRARY_PATH: "/usr/lib/fontconfig:/usr/lib/freetype/:"
+          LD_LIBRARY_PATH: "/usr/lib:"
 
       - name: Rename Library File Name
         shell: bash
@@ -136,7 +130,7 @@ jobs:
       - name: Set Android NDK Path
         shell: bash
         run: |
-          ll ${{ steps.setup-ndk.outputs.ndk-path }}
+          ls -l ${{ steps.setup-ndk.outputs.ndk-path }}
           PATH=${PATH}:${{ steps.setup-ndk.outputs.ndk-path }}/toolchains/llvm/prebuilt/x86_64/bin
 
       - name: Build Android X64
