--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -65,6 +65,7 @@ jobs:
           rustup target add x86_64-unknown-linux-gnu
           rustup target add aarch64-unknown-linux-gnu
           sudo apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
+          ls -l /usr/lib/aarch64-linux-gnu
 
       - name: Build Linux X64
         shell: bash
@@ -76,8 +77,8 @@ jobs:
         run: |
           cargo build --package gif-jni --lib --release --target aarch64-unknown-linux-gnu
         env:
-          LD_LIBRARY_PATH: "$LD_LIBRARY_PATH:/usr/lib/aarch64-linux-gnu:"
-          DYLD_LIBRARY_PATH: "$LD_LIBRARY_PATH:/usr/lib/aarch64-linux-gnu:"
+          LD_LIBRARY_PATH: "${LD_LIBRARY_PATH}:/usr/lib/aarch64-linux-gnu:"
+          DYLD_LIBRARY_PATH: "${LD_LIBRARY_PATH}:/usr/lib/aarch64-linux-gnu:"
           CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: aarch64-linux-gnu-gcc
 
       - name: Rename Library File Name
@@ -131,8 +132,8 @@ jobs:
       - name: Set Android NDK ToolChains Path
         shell: bash
         run: |
-          ls -l ${{ steps.setup-ndk.outputs.ndk-path }}/toolchains/llvm/prebuilt
-          PATH=${PATH}:${{ steps.setup-ndk.outputs.ndk-path }}/toolchains/llvm/prebuilt/linux-x86_64/bin
+          ls -l ${{ steps.setup-ndk.outputs.ndk-path }}/toolchains/llvm/prebuilt/linux-x86_64/bin
+          export PATH=${PATH}:${{ steps.setup-ndk.outputs.ndk-path }}/toolchains/llvm/prebuilt/linux-x86_64/bin
 
       - name: Build Android X64
         shell: bash
