--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -64,7 +64,7 @@ jobs:
         run: |
           rustup target add x86_64-unknown-linux-gnu
           rustup target add aarch64-unknown-linux-gnu
-          sudo apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
+          sudo apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu libfontconfig1-dev
           ls -l /usr/lib/aarch64-linux-gnu
 
       - name: Build Linux X64
@@ -132,8 +132,9 @@ jobs:
       - name: Set Android NDK ToolChains Path
         shell: bash
         run: |
-          ls -l ${{ steps.setup-ndk.outputs.ndk-path }}/toolchains/llvm/prebuilt/linux-x86_64/bin
           export PATH=${PATH}:${{ steps.setup-ndk.outputs.ndk-path }}/toolchains/llvm/prebuilt/linux-x86_64/bin
+          which x86_64-linux-android26-clang
+          which aarch64-linux-android26-clang
 
       - name: Build Android X64
         shell: bash
