--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -64,10 +64,12 @@ jobs:
         run: |
           rustup target add x86_64-unknown-linux-gnu
           rustup target add aarch64-unknown-linux-gnu
-          sudo apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
-          apt-get download libfontconfig-dev:arm64
+          sudo dpkg --add-architecture arm64
+          sudo apt-get update
+          sudo apt-get install -y -qq gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
+          sudo apt-get download libfontconfig-dev:arm64
           dpkg -X libfontconfig-dev*.deb apt_temp
-          sudo cp apt_temp/usr/lib/aarch64-linux-gnu/* /usr/lib/aarch64-linux-gnu/
+          sudo cp -r apt_temp/usr/lib/aarch64-linux-gnu/* /usr/lib/aarch64-linux-gnu/
           ls -l /usr/lib/aarch64-linux-gnu
 
       - name: Build Linux X64
