--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -65,10 +65,11 @@ jobs:
           rustup target add x86_64-unknown-linux-gnu
           rustup target add aarch64-unknown-linux-gnu
           sudo dpkg --add-architecture arm64
-          sudo apt-get update
           sudo apt-get install -y -qq gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
           sudo apt-get download libfontconfig-dev:arm64
           dpkg -X libfontconfig-dev*.deb apt_temp
+          sudo apt-get download libfreetype-dev:arm64
+          dpkg -X libfreetype-dev*.deb apt_temp
           sudo cp -r apt_temp/usr/lib/aarch64-linux-gnu/* /usr/lib/aarch64-linux-gnu/
           ls -l /usr/lib/aarch64-linux-gnu
 
