--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -65,6 +65,7 @@ jobs:
           rustup target add x86_64-unknown-linux-gnu
           rustup target add aarch64-unknown-linux-gnu
           sudo dpkg --add-architecture arm64
+          sudo apt-get update
           sudo apt-get install -y -qq gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
           sudo apt-get download libfontconfig-dev:arm64
           dpkg -X libfontconfig-dev*.deb apt_temp
@@ -83,8 +84,6 @@ jobs:
         run: |
           cargo build --package gif-jni --lib --release --target aarch64-unknown-linux-gnu
         env:
-          LD_LIBRARY_PATH: "${LD_LIBRARY_PATH}:/usr/lib/aarch64-linux-gnu:"
-          DYLD_LIBRARY_PATH: "${LD_LIBRARY_PATH}:/usr/lib/aarch64-linux-gnu:"
           CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: aarch64-linux-gnu-gcc
 
       - name: Rename Library File Name
