--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -64,10 +64,9 @@ jobs:
         run: |
           rustup target add x86_64-unknown-linux-gnu
           rustup target add aarch64-unknown-linux-gnu
-          cat /etc/apt/sources.list
-          ls -l /etc/apt/sources.list.d
-          sudo rm azure
           sudo dpkg --add-architecture arm64
+          sudo mv /etc/apt/sources.list /etc/apt/sources.list.bak
+          sudo sed 's/azure.archive.ubuntu.com/ports.ubuntu.com/' /etc/apt/sources.list.bak > /etc/apt/sources.list
           sudo apt-get update
           sudo apt-get install -y -qq gcc-aarch64-linux-gnu:amd64 g++-aarch64-linux-gnu:amd64
           sudo apt-get download libfontconfig-dev:arm64
