--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -65,7 +65,7 @@ jobs:
           rustup target add x86_64-unknown-linux-gnu
           rustup target add aarch64-unknown-linux-gnu
           sudo dpkg --add-architecture arm64
-          sed 's/azure.archive.ubuntu.com\/ubuntu/ports.ubuntu.com/' /etc/apt/sources.list.bak | sudo tee -a /etc/apt/sources.list
+          sed 's/azure.archive.ubuntu.com\/ubuntu/ports.ubuntu.com/' /etc/apt/sources.list | sudo tee /etc/apt/sources.list.d/ports.list
           sudo apt-get update
           sudo apt-get install -y -qq gcc-aarch64-linux-gnu:amd64 g++-aarch64-linux-gnu:amd64
           sudo apt-get download libfontconfig-dev:arm64
