--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -66,23 +66,23 @@ jobs:
           rustup target add aarch64-unknown-linux-gnu
           sudo dpkg --add-architecture arm64
           sudo sed -i 's/deb http/deb [arch=amd64,i386] http/' /etc/apt/sources.list 
-          echo 'deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports/ bionic main restricted' | sudo tee -a /etc/apt/sources.list 
-          echo 'deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports/ bionic universe' | sudo tee -a /etc/apt/sources.list 
-          echo 'deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports/ bionic multiverse' | sudo tee -a /etc/apt/sources.list 
-          echo 'deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports/ bionic-updates main restricted' | sudo tee -a /etc/apt/sources.list 
-          echo 'deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports/ bionic-updates universe' | sudo tee -a /etc/apt/sources.list 
-          echo 'deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports/ bionic-updates multiverse' | sudo tee -a /etc/apt/sources.list 
-          echo 'deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports/ bionic-security main restricted' | sudo tee -a /etc/apt/sources.list 
-          echo 'deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports/ bionic-security universe' | sudo tee -a /etc/apt/sources.list 
-          echo 'deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports/ bionic-security multiverse' | sudo tee -a /etc/apt/sources.list 
+          echo 'deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports/ focal main restricted' | sudo tee -a /etc/apt/sources.list 
+          echo 'deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports/ focal universe' | sudo tee -a /etc/apt/sources.list 
+          echo 'deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports/ focal multiverse' | sudo tee -a /etc/apt/sources.list 
+          echo 'deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports/ focal-updates main restricted' | sudo tee -a /etc/apt/sources.list 
+          echo 'deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports/ focal-updates universe' | sudo tee -a /etc/apt/sources.list 
+          echo 'deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports/ focal-updates multiverse' | sudo tee -a /etc/apt/sources.list 
+          echo 'deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports/ focal-security main restricted' | sudo tee -a /etc/apt/sources.list 
+          echo 'deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports/ focal-security universe' | sudo tee -a /etc/apt/sources.list 
+          echo 'deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports/ focal-security multiverse' | sudo tee -a /etc/apt/sources.list 
           sudo apt-get update
           sudo apt-get install -y -qq gcc-aarch64-linux-gnu:amd64 g++-aarch64-linux-gnu:amd64 librust-crossfont-dev
-#          sudo apt-get download libfontconfig-dev:arm64
-#          dpkg -X libfontconfig-dev*.deb apt_temp
-#          sudo apt-get download libfreetype-dev:arm64
-#          dpkg -X libfreetype-dev*.deb apt_temp
-#          sudo cp -r apt_temp/usr/lib/aarch64-linux-gnu/* /usr/lib/aarch64-linux-gnu/
-#          ls -l /usr/lib/aarch64-linux-gnu
+          sudo apt-get download libfontconfig-dev:arm64
+          dpkg -X libfontconfig-dev*.deb apt_temp
+          sudo apt-get download libfreetype-dev:arm64
+          dpkg -X libfreetype-dev*.deb apt_temp
+          sudo cp -r apt_temp/usr/lib/aarch64-linux-gnu/* /usr/lib/aarch64-linux-gnu/
+          ls -l /usr/lib/aarch64-linux-gnu
 
       - name: Build Linux X64
         shell: bash
