--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -77,7 +77,7 @@ jobs:
           echo 'deb [arch=arm64] http://ports.ubuntu.com/ubuntu-ports/ focal-security multiverse' | sudo tee -a /etc/apt/sources.list 
           sudo apt-get update
           sudo apt-get install -y -qq gcc-aarch64-linux-gnu:amd64 g++-aarch64-linux-gnu:amd64
-          sudo apt-get download libfontconfig-dev1:arm64
+          sudo apt-get download libfontconfig1-dev:arm64
           dpkg -X libfontconfig-dev*.deb apt_temp
           sudo apt-get download libfreetype-dev:arm64
           dpkg -X libfreetype-dev*.deb apt_temp
